<resources>
    <string name="app_name">street-fight</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="insert_pass">Insert Pass</string>
    <string name="insert_username">Insert Username</string>
    <string name="repeat_pass">Repeat pass</string>
    <string name="create_clan">Create Clan</string>
    <string name="join_clan">Join clan</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register">Register</string>
    <string name="clan_acronym">Clan Acronym</string>
    <string name="clan_icon_url">Clan icon URL</string>
    <string name="clan_name">Clan Name</string>
    <string name="clan_color">Clan Color</string>
    <string name="crear_clan">Crear Clan</string>
    <string name="todo">TODO</string>C
    <string name="clan_change">Cambiar clan</string>
    <string name="logout">Cerrar sesion</string>
    <string name="donate">Donar</string>
    <string name="flag_ok">OK</string>
    <string name="fight">Luchad!!!</string>
    <string name="capture_start">Captura     comenzada</string>
    <string name="clan_id">CLAN ID</string>
    <string name="join_and_create">JOIN AND CREATE</string>
    <string name="power_rangers">Power Rangers</string>
    <string name="naniiiiii78">Naniiiiii78</string>
    <string name="text_player">User</string>
    <string name="text_catch">CATCH FLAG</string>
    <string name="wrong_location_text">wrong_location</string>
</resources>