<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla">

    <EditText
        android:id="@+id/clan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@drawable/fondo_boton"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/clan_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#040404"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/clan_acronym"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clan_name"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="216dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fondo_boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/clan_icon_url"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="210dp"
        android:layout_height="74dp"
        android:background="@drawable/fondo_boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/clan_color"
        android:textAlignment="center"
        android:textColor="#010101"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/crear_clan"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
</androidx.constraintlayout.widget.ConstraintLayout>