<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla">

    <EditText
        android:id="@+id/register_repeatpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/fondo_boton"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/repeat_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/create_clan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="146dp"
        android:layout_height="163dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/logo_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/register_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/insert_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/register_repeatpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/insert_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#070707"
        app:layout_constraintBottom_toTopOf="@+id/register_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/join_clan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:background="@drawable/fondo_boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_clan"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/create_clan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:background="@drawable/fondo_boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fondo_boton"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/create_clan_text"
        android:layout_width="131dp"
        android:layout_height="45dp"
        android:fontFamily="@font/bungee"
        android:hint="@string/create_clan"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_clan"
        app:layout_constraintEnd_toStartOf="@+id/join_clan"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/create_clan"
        app:layout_constraintTop_toTopOf="@+id/create_clan"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/join_clan_text"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:fontFamily="@font/bungee"
        android:hint="@string/join_clan"
        android:textAlignment="center"
        android:textColorHint="#010101"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/join_clan"
        app:layout_constraintEnd_toEndOf="@+id/join_clan"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/join_clan"
        app:layout_constraintTop_toTopOf="@+id/join_clan"
        app:layout_constraintVertical_bias="0.44" />
</androidx.constraintlayout.widget.ConstraintLayout>