<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul_1000">

    <EditText
        android:id="@+id/input_join_clan_id"
        android:layout_width="220dp"
        android:layout_height="69dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@drawable/fondo_boton_220"
        android:fontFamily="@font/bungee"
        android:hint="@string/clan_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_join_clan"
        android:layout_width="220dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_boton_220"
        android:contentDescription="@string/todo"
        android:onClick="onButtonJoinClanClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_join_clan_id" />

    <TextView
        android:id="@+id/text_button_join_clan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/join_and_create"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_join_clan"
        app:layout_constraintEnd_toEndOf="@+id/button_join_clan"
        app:layout_constraintStart_toStartOf="@+id/button_join_clan"
        app:layout_constraintTop_toTopOf="@+id/button_join_clan" />

</androidx.constraintlayout.widget.ConstraintLayout>