<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/map_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/Flag_captured_image"
        android:layout_width="330dp"
        android:layout_height="320dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/flag_captured_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:background="@drawable/fondo_boton"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/Flag_captured_image"
        app:layout_constraintEnd_toEndOf="@+id/Flag_captured_image"
        app:layout_constraintStart_toStartOf="@+id/Flag_captured_image"
        app:layout_constraintTop_toTopOf="@+id/Flag_captured_image"
        app:srcCompat="@drawable/fondo_boton" />

    <TextView
        android:id="@+id/Flag_captured_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/flag_ok"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/flag_captured_button"
        app:layout_constraintEnd_toEndOf="@+id/flag_captured_button"
        app:layout_constraintStart_toStartOf="@+id/flag_captured_button"
        app:layout_constraintTop_toTopOf="@+id/flag_captured_button" />

    <TextView
        android:id="@+id/flag_capture_fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/fight"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Flag_captured_image"
        app:layout_constraintEnd_toEndOf="@+id/Flag_captured_image"
        app:layout_constraintStart_toStartOf="@+id/Flag_captured_image"
        app:layout_constraintTop_toTopOf="@+id/Flag_captured_image" />

    <TextView
        android:id="@+id/flag_capture_capture_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/capture_start"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/Flag_captured_image"
        app:layout_constraintEnd_toEndOf="@+id/Flag_captured_image"
        app:layout_constraintStart_toStartOf="@+id/Flag_captured_image"
        app:layout_constraintTop_toTopOf="@+id/Flag_captured_image" />

</androidx.constraintlayout.widget.ConstraintLayout>